--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -6,4 +6,72 @@
     android:layout_height="match_parent"
     tools:context="com.example.guest.iamhere.CreateAccountActivity">
 
+    <EditText
+        android:id="@+id/nameInputTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="32dp"
+        android:ems="10"
+        android:hint="Enter your name"
+        android:inputType="textPersonName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <EditText
+        android:id="@+id/emailInputTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Enter your email address"
+        android:inputType="textPersonName"
+        app:layout_constraintLeft_toLeftOf="@+id/nameInputTextView"
+        app:layout_constraintRight_toRightOf="@+id/nameInputTextView"
+        app:layout_constraintTop_toBottomOf="@+id/nameInputTextView" />
+
+    <EditText
+        android:id="@+id/passwordInputTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Enter your password"
+        android:inputType="textPersonName"
+        app:layout_constraintLeft_toLeftOf="@+id/emailInputTextView"
+        app:layout_constraintRight_toRightOf="@+id/emailInputTextView"
+        app:layout_constraintTop_toBottomOf="@+id/emailInputTextView" />
+
+    <EditText
+        android:id="@+id/passwordConfirmInputTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Confirm password"
+        android:inputType="textPersonName"
+        app:layout_constraintLeft_toLeftOf="@+id/passwordInputTextView"
+        app:layout_constraintRight_toRightOf="@+id/passwordInputTextView"
+        app:layout_constraintTop_toBottomOf="@+id/passwordInputTextView" />
+
+    <Button
+        android:id="@+id/createInputButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="32dp"
+        android:text="Register"
+        app:layout_constraintLeft_toLeftOf="@+id/passwordConfirmInputTextView"
+        app:layout_constraintRight_toRightOf="@+id/passwordConfirmInputTextView"
+        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInputTextView" />
 </android.support.constraint.ConstraintLayout>
