--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.guest.iamhere.CreateAccountActivity">
+    tools:context="com.example.guest.iamhere.activities.CreateAccountActivity">
 
     <EditText
         android:id="@+id/nameInputTextView"
