--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="primary">#FFC107</color>
     <color name="colorPrimary">#FFC107</color>
 
-    <color name="colorPrimaryDark">#FFA000</color>
+    <color name="colorPrimaryDark">#ffa000</color>
     <color name="primary_dark">#FFA000</color>
 
     <color name="primary_light">#FFECB3</color>
