--- a/app/src/main/res/layout/activity_login_gate.xml
+++ b/app/src/main/res/layout/activity_login_gate.xml
@@ -8,12 +8,11 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
         app:srcCompat="@drawable/beebg"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
+        />
 
     <Button
         android:id="@+id/gateLoginButton"
@@ -21,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="24dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/bivouac_button"
         android:padding="8dp"
         android:text="Log In"
         android:textColor="@color/icons"
@@ -34,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="16dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/bivouac_button"
         android:text="Register New Account"
         android:textColor="@color/icons"
         app:layout_constraintLeft_toLeftOf="@+id/gateLoginButton"
