--- a/app/src/main/res/layout/activity_new_swarm_report.xml
+++ b/app/src/main/res/layout/activity_new_swarm_report.xml
@@ -4,15 +4,120 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.guest.iamhere.activities.NewSwarmReportActivity">
+    android:background="@color/primary_light"
+    tools:context="com.example.guest.iamhere.activities.NewSwarmReportActivity"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="81dp">
 
     <RadioGroup
-        android:layout_width="0dp"
+        android:id="@+id/radioGroupSize"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="32dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
+
+        <TextView
+            android:id="@+id/sizeLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="About how big is the swarm?" />
+
+        <RadioButton
+            android:id="@+id/baseball"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="Baseball"
+            android:theme="@style/MyRadioButton" />
+
+        <RadioButton
+            android:id="@+id/football"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="Football"
+            android:theme="@style/MyRadioButton" />
+
+        <RadioButton
+            android:id="@+id/basketball"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="Basketball"
+            android:theme="@style/MyRadioButton" />
+
+        <RadioButton
+            android:id="@+id/beachball"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="Beachball"
+            android:theme="@style/MyRadioButton" />
+    </RadioGroup>
+
+    <RadioGroup
+        android:id="@+id/radioGroupAccessibility"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroupSize"
+        tools:layout_editor_absoluteX="8dp">
+
+        <TextView
+            android:id="@+id/accessibilityLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="How accessible is the swarm?" />
+
+        <RadioButton
+            android:id="@+id/reach"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="false"
+            android:text="Within unassisted reach"
+            android:theme="@style/MyRadioButton" />
+
+        <RadioButton
+            android:id="@+id/hasLadder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="false"
+            android:text="Will require a small ladder, which I can provide"
+            android:theme="@style/MyRadioButton" />
+
+        <RadioButton
+            android:id="@+id/ladder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="false"
+            android:text="Will require a small ladder"
+            android:theme="@style/MyRadioButton" />
+
+        <RadioButton
+            android:id="@+id/tallLadder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="false"
+            android:text="Will require a large ladder"
+            android:theme="@style/MyRadioButton" />
+
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/reportSwarmButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginTop="16dp"
+        android:background="@drawable/bivouac_button"
+        android:padding="8dp"
+        android:text="Report Swarm"
+        app:layout_constraintLeft_toLeftOf="@+id/radioGroupAccessibility"
+        app:layout_constraintRight_toRightOf="@+id/radioGroupAccessibility"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroupAccessibility" />
+
 </android.support.constraint.ConstraintLayout>
