--- a/app/src/main/res/layout/activity_new_swarm_report.xml
+++ b/app/src/main/res/layout/activity_new_swarm_report.xml
@@ -11,9 +11,9 @@
 
     <RadioGroup
         android:id="@+id/radioGroupSize"
-        android:layout_width="match_parent"
+        android:layout_width="368dp"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="0dp">
 
         <TextView
@@ -57,7 +57,7 @@
 
     <RadioGroup
         android:id="@+id/radioGroupAccessibility"
-        android:layout_width="match_parent"
+        android:layout_width="368dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/radioGroupSize"
         tools:layout_editor_absoluteX="8dp">
@@ -106,6 +106,19 @@
 
     </RadioGroup>
 
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:id="@+id/locationTextView"
+        app:layout_constraintLeft_toLeftOf="@+id/radioGroupAccessibility"
+        app:layout_constraintRight_toRightOf="@+id/radioGroupAccessibility"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroupAccessibility"
+        android:gravity="center">
+
+    </TextView>
+
     <Button
         android:id="@+id/reportSwarmButton"
         android:layout_width="wrap_content"
@@ -116,8 +129,10 @@
         android:background="@drawable/bivouac_button"
         android:padding="8dp"
         android:text="Report Swarm"
-        app:layout_constraintLeft_toLeftOf="@+id/radioGroupAccessibility"
-        app:layout_constraintRight_toRightOf="@+id/radioGroupAccessibility"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroupAccessibility" />
+        app:layout_constraintLeft_toLeftOf="@+id/locationTextView"
+        app:layout_constraintRight_toRightOf="@+id/locationTextView"
+        app:layout_constraintTop_toBottomOf="@+id/locationTextView"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
 </android.support.constraint.ConstraintLayout>
