--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -45,7 +45,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Enter your password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         app:layout_constraintLeft_toLeftOf="@+id/emailInputTextView"
         app:layout_constraintRight_toRightOf="@+id/emailInputTextView"
         app:layout_constraintTop_toBottomOf="@+id/emailInputTextView" />
@@ -59,7 +59,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Confirm password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         app:layout_constraintLeft_toLeftOf="@+id/passwordInputTextView"
         app:layout_constraintRight_toRightOf="@+id/passwordInputTextView"
         app:layout_constraintTop_toBottomOf="@+id/passwordInputTextView" />
