--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,6 +15,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:paddingBottom="15dp"
 
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
