testing git ignoring the SecretConstants class

--- a/app/src/main/res/layout/claim_item.xml
+++ b/app/src/main/res/layout/claim_item.xml
@@ -29,22 +29,6 @@
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintLeft_creator="1" />
 
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="@+id/guideline"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/swarmImage"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginBottom="8dp" />
-
         <TextView
             android:id="@+id/timeStampTextView"
             android:layout_width="0dp"
@@ -119,6 +103,21 @@
             app:layout_constraintGuide_begin="192dp"
             tools:layout_editor_absoluteX="192dp"
             tools:layout_editor_absoluteY="81dp" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:srcCompat="@drawable/bee"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="@+id/guideline"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/swarmImage"
+            android:layout_marginBottom="0dp"
+            app:layout_constraintVertical_bias="0.492"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
