change location listener interval, put submit button for new report under control of username and id not being null, change the all section of the db when a claim is made, add scrollView to create account activity, change color for primary and secondary text, confirm that the background image was free

--- a/app/src/main/res/layout/activity_login_gate.xml
+++ b/app/src/main/res/layout/activity_login_gate.xml
@@ -22,7 +22,7 @@
         android:background="@drawable/bivouac_button"
         android:padding="8dp"
         android:text="Log In"
-        android:textColor="@color/icons"
+        android:textColor="@color/primary_text"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/gateRegisterButton"
         android:layout_marginRight="0dp"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bivouac_button"
         android:text="Register New Account"
-        android:textColor="@color/icons"
+        android:textColor="@color/primary_text"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="31dp"
