--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -1,98 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.guest.iamhere.activities.CreateAccountActivity"
-    android:background="@color/primary_light">
+    android:background="@color/primary_light"
+    tools:layout_editor_absoluteX="8dp"
+    tools:layout_editor_absoluteY="8dp">
 
-    <EditText
-        android:id="@+id/nameInputTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="Enter your name"
-        android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/primary_light"
+        tools:context="com.example.guest.iamhere.activities.CreateAccountActivity">
 
-    <EditText
-        android:id="@+id/emailInputTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="Enter your email address"
-        android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="@+id/nameInputTextView"
-        app:layout_constraintRight_toRightOf="@+id/nameInputTextView"
-        app:layout_constraintTop_toBottomOf="@+id/nameInputTextView" />
+        <EditText
+            android:id="@+id/nameInputTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="32dp"
+            android:ems="10"
+            android:hint="Enter your name"
+            android:inputType="textPersonName"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/passwordInputTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:ems="10"
-        android:hint="Enter your password"
-        android:inputType="textPassword"
-        app:layout_constraintLeft_toLeftOf="@+id/emailInputTextView"
-        app:layout_constraintRight_toRightOf="@+id/emailInputTextView"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
-        app:layout_constraintVertical_bias="0.0" />
+        <EditText
+            android:id="@+id/emailInputTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:hint="Enter your email address"
+            android:inputType="textPersonName"
+            app:layout_constraintLeft_toLeftOf="@+id/nameInputTextView"
+            app:layout_constraintRight_toRightOf="@+id/nameInputTextView"
+            app:layout_constraintTop_toBottomOf="@+id/nameInputTextView" />
 
-    <EditText
-        android:id="@+id/passwordConfirmInputTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="5dp"
-        android:ems="10"
-        android:hint="Confirm password"
-        android:inputType="textPassword"
-        app:layout_constraintLeft_toLeftOf="@+id/passwordInputTextView"
-        app:layout_constraintRight_toRightOf="@+id/passwordInputTextView"
-        app:layout_constraintTop_toBottomOf="@+id/passwordInputTextView"
-        app:layout_constraintHorizontal_bias="0.0" />
+        <EditText
+            android:id="@+id/passwordInputTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:hint="Enter your password"
+            android:inputType="textPassword"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@+id/emailInputTextView"
+            app:layout_constraintRight_toRightOf="@+id/emailInputTextView"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
+            app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/createInputButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="31dp"
-        android:text="Register"
-        app:layout_constraintLeft_toLeftOf="@+id/passwordConfirmInputTextView"
-        app:layout_constraintRight_toRightOf="@+id/passwordConfirmInputTextView"
-        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInputTextView"
-        android:background="@drawable/bivouac_button"/>
+        <EditText
+            android:id="@+id/passwordConfirmInputTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="5dp"
+            android:ems="10"
+            android:hint="Confirm password"
+            android:inputType="textPassword"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@+id/passwordInputTextView"
+            app:layout_constraintRight_toRightOf="@+id/passwordInputTextView"
+            app:layout_constraintTop_toBottomOf="@+id/passwordInputTextView" />
 
-    <EditText
-        android:id="@+id/phoneNumberTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="(optional) Enter your phone number"
-        android:inputType="phone"
-        android:layout_marginTop="7dp"
-        app:layout_constraintTop_toBottomOf="@+id/emailInputTextView"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/emailInputTextView"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="@+id/emailInputTextView" />
+        <Button
+            android:id="@+id/createInputButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="31dp"
+            android:background="@drawable/bivouac_button"
+            android:text="Register"
+            app:layout_constraintLeft_toLeftOf="@+id/passwordConfirmInputTextView"
+            app:layout_constraintRight_toRightOf="@+id/passwordConfirmInputTextView"
+            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInputTextView" />
 
-</android.support.constraint.ConstraintLayout>
+        <EditText
+            android:id="@+id/phoneNumberTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="7dp"
+            android:ems="10"
+            android:hint="(optional) Enter your phone number"
+            android:inputType="phone"
+            app:layout_constraintLeft_toLeftOf="@+id/emailInputTextView"
+            app:layout_constraintRight_toRightOf="@+id/emailInputTextView"
+            app:layout_constraintTop_toBottomOf="@+id/emailInputTextView" />
+
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
