--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -33,6 +33,7 @@
         android:layout_marginTop="24dp"
         android:textSize="20sp"
         android:text="Unclaimed swarms near you:"
+        android:textColor="@color/primary_text"
         android:textAlignment="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
