--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="MyRadioButton" parent="Theme.AppCompat.Light">
-        <item name="colorControlNormal">@color/accent</item>
+        <item name="colorControlNormal">@color/secondary_text</item>
         <item name="colorControlActivated">@color/primary_dark</item>
     </style>
 
