add mapActivity and replace mapsActivity with it so that the activity hierarchy works

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_light"
-    tools:context=".activities.MapsActivity">
+    tools:context="com.example.guest.iamhere.activities.MapActivity"
+    android:background="@color/primary_light">
 
     <ImageView
         android:layout_width="0dp"
@@ -28,5 +27,6 @@
         android:layout_marginRight="8dp">
 
     </ImageView>
+
 
 </android.support.constraint.ConstraintLayout>
