add xml for my_claim_item

--- a/app/src/main/res/layout/my_reported_claim_item.xml
+++ b/app/src/main/res/layout/my_reported_claim_item.xml
@@ -62,7 +62,8 @@
             android:layout_marginLeft="0dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            android:text="give em a call"
+            android:drawableLeft="@drawable/ic_phone_black_24dp"
+            android:text="Call"
             android:textSize="20sp"
             android:textColor="@color/primary_text"
             app:layout_constraintLeft_toLeftOf="parent"
