--- a/app/src/main/res/layout/my_claim_item.xml
+++ b/app/src/main/res/layout/my_claim_item.xml
@@ -16,15 +16,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:clickable="true"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/guideline"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/bee"
             tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1" />
+            tools:layout_constraintRight_creator="1"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent" />
 
         <TextView
             android:id="@+id/timeStampTextView"
@@ -41,33 +41,49 @@
             tools:layout_constraintLeft_creator="1" />
 
         <TextView
+            android:id="@+id/contactReporterTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Contact Swarm Reporter"
+            android:textColor="@color/primary_text"
+            android:textSize="20sp"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@+id/timeStampTextView"
+            app:layout_constraintRight_toRightOf="@+id/timeStampTextView"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1"
+            app:layout_constraintTop_toBottomOf="@+id/claimantTextView" />
+
+        <TextView
             android:id="@+id/claimantTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:text="Reported by: "
             android:textColor="@color/primary_text"
             android:textSize="20sp"
-            android:text="Distance from your current location: __ m"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="@+id/timeStampTextView"
             app:layout_constraintRight_toRightOf="@+id/timeStampTextView"
             app:layout_constraintTop_toBottomOf="@+id/timeStampTextView"
-            app:layout_constraintHorizontal_bias="0.0"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1" />
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1" />
 
         <TextView
             android:id="@+id/sizeTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:textColor="@color/primary_text"
             android:textSize="20sp"
             android:text="Size: The size of a __"
             app:layout_constraintLeft_toLeftOf="@+id/claimantTextView"
             app:layout_constraintRight_toRightOf="@+id/claimantTextView"
-            app:layout_constraintTop_toBottomOf="@+id/claimantTextView"
             tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1" />
+            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/contactReporterTextView" />
 
         <TextView
             android:id="@+id/accessibilityTextView"
@@ -81,47 +97,25 @@
             app:layout_constraintRight_toRightOf="@+id/sizeTextView"
             app:layout_constraintTop_toBottomOf="@+id/sizeTextView"
             tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1" />
+            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintHorizontal_bias="0.0" />
 
         <Button
-            android:id="@+id/claimSwarmButton"
+            android:id="@+id/cancelMyClaimButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:layout_marginLeft="0dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
             android:background="@drawable/bivouac_button"
-            android:text="Claim"
+            android:text="Cancel My Claim"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/accessibilityTextView"
-            app:layout_constraintRight_toLeftOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/accessibilityTextView"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="192dp"
-            tools:layout_editor_absoluteX="192dp"
-            tools:layout_editor_absoluteY="81dp" />
-
-        <ImageView
-            android:id="@+id/mapImageView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:clickable="true"
-            app:layout_constraintBottom_toBottomOf="@+id/swarmImage"
-            app:layout_constraintLeft_toLeftOf="@+id/guideline"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.492"
-            app:srcCompat="@drawable/bee"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/accessibilityTextView"
+            app:layout_constraintVertical_bias="0.04000002" />
 
     </android.support.constraint.ConstraintLayout>
 
